[package]
name = "nar-toolbox"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
http = "1.1.0"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = { version = "0.5" }
nix-compat = { git = "https://code.tvl.fyi/depot.git:workspace=views/tvix.git" }
nom = "7.1.0"
ouroboros = "0.15"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
