[package]
name = "nar-toolbox"
version = "0.1.0"
edition = "2021"

[dependencies]
async-compression = { version = "0.4.17", features = [
    "bzip2",
    "gzip",
    "lzma",
    "tokio",
    "xz",
    "zstd",
] }
axum = { version = "0.7.9", features = ["http2"] }
clap = { version = "4.0", features = ["derive"] }
futures = "0.3.31"
http = "1.1.0"
nix-compat = { git = "https://code.tvl.fyi/depot.git:workspace=views/tvix.git" }
nom = "7.1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0"
tokio-stream = "0.1.16"
